低功耗测试

--- a/F767_TEST/F767_TEST.ioc
+++ b/F767_TEST/F767_TEST.ioc
@@ -56,19 +56,18 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.TIM4_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -144,15 +143,11 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
-PC13.Signal=GPXTI13
+PC13.Signal=GPIO_Input
 PC14/OSC32_IN.Locked=true
-PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
-PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
@@ -164,6 +159,44 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PCC.Checker=false
+PCC.Line=STM32F7x7
+PCC.MCU=STM32F767ZITx
+PCC.PartNumber=STM32F767ZITx
+PCC.Seq0=2
+PCC.Seq0.Step0.Average_Current=118 mA
+PCC.Seq0.Step0.CPU_Frequency=216 MHz
+PCC.Seq0.Step0.Category=In DS Table
+PCC.Seq0.Step0.DMIPS=462.0
+PCC.Seq0.Step0.Duration=0.1 ms
+PCC.Seq0.Step0.Frequency=4 MHz
+PCC.Seq0.Step0.Memory=ICTM FLASH-SingleBank REGON
+PCC.Seq0.Step0.Mode=RUN
+PCC.Seq0.Step0.Oscillator=HSE PLL
+PCC.Seq0.Step0.Peripherals=
+PCC.Seq0.Step0.TaMax=89.42
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=Scale1-High
+PCC.Seq0.Step0.Vdd=3.3
+PCC.Seq0.Step0.Voltage_Source=Battery
+PCC.Seq0.Step1.Average_Current=370 \u00B5A
+PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Category=In DS Table
+PCC.Seq0.Step1.DMIPS=0.0
+PCC.Seq0.Step1.Duration=0.9 ms
+PCC.Seq0.Step1.Frequency=0 Hz
+PCC.Seq0.Step1.Memory=n/a
+PCC.Seq0.Step1.Mode=STOP_NM (Normal Mode)
+PCC.Seq0.Step1.Oscillator=Regulator_LP Flash-PwrDwn
+PCC.Seq0.Step1.Peripherals=
+PCC.Seq0.Step1.TaMax=104.95
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=No Scale
+PCC.Seq0.Step1.Vdd=3.3
+PCC.Seq0.Step1.Voltage_Source=Battery
+PCC.Series=STM32F7
+PCC.Temperature=25
+PCC.Vdd=3.3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -195,10 +228,10 @@ PG7.Signal=GPIO_Input
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
-PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -254,10 +287,11 @@ RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SClocksFreq_Value=48000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LCDTFToutputFreq_Value=96000000
 RCC.LPTIM1Freq_Value=54000000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
 RCC.MCO2PinFreq_Value=216000000
@@ -315,8 +349,6 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=1000
 TIM4.Prescaler=108
