--- a/MyBalance-Hal_I2c/New_F103C8.ioc
+++ b/MyBalance-Hal_I2c/New_F103C8.ioc
@@ -1,11 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion
-ADC1.NbrOfConversion=1
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ADC1.master=1
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
@@ -25,20 +24,24 @@ FREERTOS.configUSE_TICK_HOOK=1
 FREERTOS.configUSE_TIMERS=1
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
+I2C1.I2C_Mode=I2C_Standard
+I2C1.IPParameters=OwnAddress,I2C_Mode
+I2C1.OwnAddress=0x0
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=FREERTOS
-Mcu.IP10=USART3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP10=USART1
+Mcu.IP11=USART3
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=12
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -73,8 +76,8 @@ Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA4
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
+Mcu.Pin8=PA6
+Mcu.Pin9=PB0
 Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -116,6 +119,8 @@ PA4.GPIOParameters=GPIO_Speed
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=ADCx_IN6
 PA8.GPIOParameters=GPIO_Speed
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Locked=true
@@ -124,8 +129,6 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
 PB0.Signal=GPXTI0
-PB1.Locked=true
-PB1.Signal=ADCx_IN9
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -156,14 +159,12 @@ PB6.Locked=true
 PB6.Signal=S_TIM4_CH1
 PB7.Locked=true
 PB7.Signal=S_TIM4_CH2
-PB8.GPIOParameters=GPIO_Speed
-PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Locked=true
-PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Speed
-PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Locked=true
-PB9.Signal=GPIO_Output
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPXTI13
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -201,7 +202,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -223,8 +224,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN9.0=ADC1_IN9,IN9
-SH.ADCx_IN9.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
