--- a/MyBalance-Hal_I2c/New_F103C8.ioc
+++ b/MyBalance-Hal_I2c/New_F103C8.ioc
@@ -46,39 +46,40 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PB0
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin20=PA11
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA4
-Mcu.Pin8=PA6
-Mcu.Pin9=PB0
-Mcu.PinsNb=34
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -119,6 +120,8 @@ PA4.GPIOParameters=GPIO_Speed
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Input
 PA6.Locked=true
 PA6.Signal=ADCx_IN6
 PA8.GPIOParameters=GPIO_Speed
